--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Portfolio</title>
+    <title>marco_spörle</title>
     <style>
         /* Basic CSS styling */
         body {
-            font-family: Arial, sans-serif;
+            font-family: Courier Prime ;
             margin: 0;
             padding: 0;
             display: flex;
@@ -36,7 +36,7 @@
         }
 
         header .button:hover {
-            background-color: #777;
+            background-color: # e52800;
         }
 
         /* Content styling */
