--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         /* Header styling */
         header {
             width: 100%;
-            background-color: #333;
+            background-color: #2dba4e;
             padding: 15px;
             display: flex;
             justify-content: center;
@@ -64,8 +64,8 @@
 
     <!-- Main Content Section -->
     <div class="content">
-        <h1>Welcome to My Portfolio</h1>
-        <p>This is a simple website showcasing my work. Below, you can find a sample video and image.</p>
+        <h1>marco spörle</h1>
+        <p></p>
 
         <!-- Video Implementation -->
         <h2>Video Introduction</h2>
@@ -75,7 +75,7 @@
         </video>
 
         <!-- Image Implementation -->
-        <h2>Sample Image</h2>
+        <h2>works</h2>
         <img src="image.jpg" alt="Sample Image">
     </div>
 
