--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Basic CSS styling */
         body {
-            font-family: Courier Prime ;
+            font-family: times new roman ;
             margin: 0;
             padding: 0;
             display: flex;
@@ -45,13 +45,6 @@
             padding: 20px;
             text-align: center;
         }
-
-        /* Video and Image styling */
-        video, img {
-            max-width: 100%;
-            border-radius: 8px;
-            margin: 20px 0;
-        }
     </style>
 </head>
 <body>
@@ -65,18 +58,11 @@
     <!-- Main Content Section -->
     <div class="content">
         <h1>marco spörle</h1>
-        <p></p>
-
-        <!-- Video Implementation -->
-        <h2>Video Introduction</h2>
-        <video controls>
-            <source src="video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-
+        <p> </p>
+        
         <!-- Image Implementation -->
         <h2>works</h2>
-        <img src="image.jpg" alt="Sample Image">
+        <img src="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/brackets2.jpg" alt="Sample Image" style="max-width:100%; height:auto;">
     </div>
 
 </body>
