--- a/index.html
+++ b/index.html
@@ -18,21 +18,12 @@
             background-color: #f0f0f0;
         }
 
-        /* Header styling */
-        header {
-            width: 100%;
-            background-color: #333;
-            padding: 15px;
-            display: flex;
-            justify-content: center;
-        }
-
         header .button {
             color: #fff;
             padding: 10px 20px;
             margin: 0 10px;
             text-decoration: none;
-            background-color: #555;
+            background-color: #fff;
             border-radius: 5px;
             transition: background-color 0.3s;
         }
@@ -43,7 +34,7 @@
 
         /* Content styling */
         .content {
-            max-width: 800px;
+            max-width: 1600px;
             padding: 20px;
             text-align: center;
         }
@@ -75,7 +66,7 @@
      
         <!-- Image Implementation -->
         <h2>recent works</h2>
-        <img src="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/brackets2.jpg" alt="Sample Image" style="max-width:50%; height:auto;">
+        <img src="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/brackets2.jpg" alt="Sample Image" style="max-width:100%; height:auto;">
     </div>
 
 </body>
