--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>marco_spörle</title>
+    <title style="color:red;" >marco_spörle</title>
     
     <link rel="stylesheet" href="style.css">
 
@@ -15,7 +15,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f0f0f0;
+            background-color: #6d5849;
         }
 
         header .button {
