--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="color:red;" >marco_spörle</title>
+    <title>marco_spörle</title>
     
     <link rel="stylesheet" href="style.css">
 
@@ -15,11 +15,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #6d5849;
+            background-color: ##ffffff;
         }
 
         header .button {
-            color: #fff;
+            color: #0014ff;
             padding: 10px 20px;
             margin: 0 10px;
             text-decoration: none;
@@ -29,7 +29,7 @@
         }
 
         header .button:hover {
-            background-color: #777;
+            background-color: #FF0000;
         }
 
         /* Content styling */
@@ -54,7 +54,7 @@
     <!-- Header Section with Buttons -->
     <header>
         <h1>marco spörle</h1>
-         <p> </p>
+         <p>dklfkshlfknlk </p>
     </header>
 
     <!-- Main Content Section -->
