--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <!-- Header Section with Buttons -->
     <header>
-        <h1>marco spörle</h1>
-         <p>dklfkshlfknlk </p>
+        <h1 style="background-color:powderblue;">marco spörle</h1>
+         <p style="background-color:tomato;">dklfkshlfknlk </p>
     </header>
 
     <!-- Main Content Section -->
