--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <!-- Header Section with Buttons -->
     <header>
-        <h1 style="color:powderblue;">marco spörle</h1>
-         <p style="color:tomato;">dklfkshlfknlk </p>
+        <h1 style="color:blue;">marco spörle</h1>
+         <p style="color:red;">dklfkshlfknlk </p>
     </header>
 
     <!-- Main Content Section -->
