--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 
     <!-- Header Section with Buttons -->
     <header>
-        <h1 style="color:blue;">marco spörle</h1>
+        <h1 style="color:blue;">marco spörle</
+        <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf" target="_blank" class="button">CV</a>
+        <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf"  target="_blank" class="button">Portfolio</a>
+        h1>
          <p style="color:red;">dklfkshlfknlk </p>
     </header>
 
