--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 
     <!-- Header Section with Buttons -->
     <header>
-        <h1 style="color:blue;">marco spörle</
+        <h1 style="color:blue;">marco spörle</ h1>
         <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf" target="_blank" class="button">CV</a>
         <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf"  target="_blank" class="button">Portfolio</a>
-        h1>
-         <p style="color:red;">dklfkshlfknlk </p>
+
+         <p style="color:red;"xoxoxoxoxo</p>
+        
     </header>
 
     <!-- Main Content Section -->
