--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            align-items: stretch;
+            align-items: center;
             background-color: #eeeeee;
         }
 
         header .button {
             color: #0014ff;
+            appearance: none;
             padding: 5px 10px;
             margin: 0px;
             text-decoration: none;
@@ -29,7 +30,7 @@
         }
 
         header .button:hover {
-            background-color: #FF0000;
+            background-color: yellow;
         }
 
         /* Content styling */
