--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            align-items: ;
+            align-items: stretch;
             background-color: #eeeeee;
         }
 
@@ -55,8 +55,8 @@
     <header>
         <h1 style="color:blue;">marco spörle</ h1>
        
-        <h2 <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf" target="_blank" class="button">CV</a>
-        <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf"  target="_blank" class="button">Portfolio</a> h2>
+        <h2 <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf" target="_blank" class="button">CV</a> h2>
+        <h2 <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf"  target="_blank" class="button">Portfolio</a> h2>
     
 
     </header> 
