--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            align-items: stretch;
+            align-items: right;
             background-color: #eeeeee;
         }
 
@@ -36,7 +36,7 @@
         .content {
             max-width: 1600px;
             padding: 20px;
-            text-align: center;
+            text-align: right;
         }
 
         /* Video and Image styling */
@@ -53,7 +53,7 @@
 
     <!-- Header Section with Buttons -->
     <header>
-        <h1 style="color:blue;">marco spörle</ 
+        <h1 style="color:blue;">marco spörle</>
        
         <h2 <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf" target="_blank" class="button">CV</a> 
         <h2 <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf"  target="_blank" class="button">Portfolio</a> 
