--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            align-items: right;
+            align-items: center;
             background-color: #eeeeee;
         }
 
@@ -21,7 +21,7 @@
             color: blue;
             appearance: none;
             padding: 5px 10px;
-            margin: 0px;
+            margin: 20px;
             text-decoration: none;
             background-color: #eeeeee;
             border-radius: 0px;
@@ -35,15 +35,15 @@
         /* Content styling */
         .content {
             max-width: 1600px;
-            padding: 20px;
-            text-align: right;
+            padding: 0px;
+            text-align: center;
         }
 
         /* Video and Image styling */
         video, img {
             max-width: 100%;
             border-radius: 0px;
-            margin: 20px 0;
+            margin: 20px ;
         }
     </style>
 
