--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <header>
         <h1 style="color:blue;">marco spörle</>
        
-        <h2 <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf" target="_blank" class="button">CV</a> 
-        <h2 <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf"  target="_blank" class="button">Portfolio</a> 
+        <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf" target="_blank" class="button">CV</a> 
+        <a href="https://raw.githubusercontent.com/mspoerle/mspoerle.github.io/main/hanging.pdf"  target="_blank" class="button">Portfolio</a> 
     
 
     </header> 
